--- a/index.html
+++ b/index.html
@@ -36,8 +36,8 @@ color:red;
        text-align:center;
       padding:40px;
     ">
-    <p>我的网站</p>
-    <a href="https://kangwenchang.com/">这是一个链接</a>
+    <p>下面是一个test页面</p>
+    <a href="https://zwhua.github.io/zwh-01re/test.html">这是一个链接</a>
 </div>
   </body>
 </html>
