--- a/index.html
+++ b/index.html
@@ -10,34 +10,42 @@
       }
     </style>
   </head>
-  <body>
-    <div style="
-       background-color:#f1f1;
+<body>
+    <header style="
+       background-color:#f1f1f1;
        text-align:center;
       padding:40px;
     ">
       <img src='https://kangwenchang.com/logo.png' alt='zwh' width="80px" height="80px">  
-    </div>
-<div style="
+    </header>
+
+<main style="
 max-width:700px;
 margin:30px auto;
 padding :15px;
 line-height:2.0;
 color:red;
 ">
-      <p>你好，这里是zwh的网站</p>
+<section style="margin-bottom: 30px;">
+  <h2 style="color:#2c3e50;border-bottom:2px solid#4CAF50;">关于我</h2>
+  <p style="color:black;">你好！我是ZWH，一名正在学习前端开发的新手。</p>
+</section>
+
+      <p>这里是zwh的网站</p>
       <p>这是我做的第一个网站</p>  
       <p>以后会发生什么</p>
       <p>谁知道呢</p>
       <p>这个p标签我也不知道要写点什么，就先这样</p>
-</div>
-<div  style="
+</main>
+
+<footer  style="
        background-color:#f1f1;
        text-align:center;
       padding:40px;
     ">
     <p>下面是一个test页面</p>
     <a href="https://zwhua.github.io/zwh-01re/test.html">这是一个链接</a>
-</div>
+</footer>
+    
   </body>
 </html>
