--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
       }
     </style>
   </head>
+
 <body>
     <header style="
        background-color:#f1f1f1;
@@ -18,20 +19,21 @@
     ">
       <img src='https://kangwenchang.com/logo.png' alt='zwh' width="80px" height="80px">  
     </header>
-
 <main style="
 max-width:700px;
 margin:30px auto;
 padding :15px;
 line-height:2.0;
 color:red;
+border:2px solid#4CAF50;
+text-align: center;
 ">
-<section style="margin-bottom: 30px;">
+<section style="margin-bottom: 30px;
+text-align: left; ">
   <h2 style="color:#2c3e50;border-bottom:2px solid#4CAF50;">关于我</h2>
   <p style="color:black;">你好！我是ZWH，一名正在学习前端开发的新手。</p>
 </section>
-
-      <p>这里是zwh的网站</p>
+      <p>这里是<b>ZWH</b>的网站</p>
       <p>这是我做的第一个网站</p>  
       <p>以后会发生什么</p>
       <p>谁知道呢</p>
