--- a/test.html
+++ b/test.html
@@ -1,244 +1,158 @@
-import React from "react";
-import { motion } from "framer-motion";
-import { Sun, Moon, Zap, DNA, Settings, Users, Feather } from "lucide-react";
-// Note: This file is a single-file React component for preview. It uses Tailwind CSS utility classes
-// and assumes Tailwind, framer-motion, lucide-react and shadcn/ui are available in the project.
+<!DOCTYPE html>
+<html lang="zh-CN">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>NeoGen · AI 基因美学精准服务平台</title>
 
-export default function NeoGenLanding() {
-  return (
-    <div className="min-h-screen bg-[radial-gradient(ellipse_at_top_left,_#0b0f1a,_#09061a_40%,_#120827_100%)] text-slate-100 antialiased">
-      {/* Decorative animated background */}
-      <div className="pointer-events-none fixed inset-0 -z-10 overflow-hidden">
-        <motion.div
-          initial={{ opacity: 0 }}
-          animate={{ opacity: 0.18 }}
-          transition={{ duration: 1.8 }}
-          className="absolute left-[-10%] top-[-20%] w-[1200px] h-[1200px] rounded-full bg-gradient-to-br from-[#5c2b8a] via-[#0e1b33] to-[#001629] blur-3xl mix-blend-overlay"
-        />
-        <motion.div
-          initial={{ x: 0 }}
-          animate={{ x: [0, 40, 0] }}
-          transition={{ duration: 18, repeat: Infinity, ease: "easeInOut" }}
-          className="absolute right-[-18%] bottom-[-10%] w-[900px] h-[900px] rounded-full bg-gradient-to-tr from-[#00ffd5] via-[#ff2fa6] to-[#5b2fff] opacity-10 blur-2xl mix-blend-screen"
-        />
-        <div className="absolute inset-0 bg-[url('/patterns/grid.svg')] opacity-3 mix-blend-overlay" />
+  <!-- Tailwind CDN -->
+  <script src="https://cdn.tailwindcss.com"></script>
+
+  <!-- Lucide Icons -->
+  <script src="https://unpkg.com/lucide@latest"></script>
+
+  <style>
+    body {
+      background: radial-gradient(ellipse at top left, #0b0f1a, #09061a 40%, #120827 100%);
+      color: #e2e8f0;
+    }
+    .glass-card {
+      background: linear-gradient(180deg, rgba(255,255,255,0.03), rgba(255,255,255,0.015));
+      backdrop-filter: blur(10px);
+    }
+  </style>
+</head>
+<body class="min-h-screen antialiased">
+
+  <!-- 背景光效 -->
+  <div class="pointer-events-none fixed inset-0 -z-10 overflow-hidden">
+    <div class="absolute left-[-10%] top-[-20%] w-[1200px] h-[1200px] rounded-full bg-gradient-to-br from-[#5c2b8a] via-[#0e1b33] to-[#001629] blur-3xl opacity-20"></div>
+    <div class="absolute right-[-18%] bottom-[-10%] w-[900px] h-[900px] rounded-full bg-gradient-to-tr from-[#00ffd5] via-[#ff2fa6] to-[#5b2fff] blur-2xl opacity-10 animate-pulse"></div>
+  </div>
+
+  <!-- HEADER -->
+  <header class="max-w-7xl mx-auto px-6 lg:px-8 py-8 flex items-center justify-between">
+    <div class="flex items-center gap-4">
+      <div class="relative w-12 h-12 flex items-center justify-center rounded-2xl bg-gradient-to-br from-[#5b2fff] to-[#00ffd5] p-1 shadow-2xl">
+        <div class="w-full h-full rounded-xl bg-white/5 backdrop-blur-sm border border-white/10 flex items-center justify-center">
+          <i data-lucide="dna" class="w-6 h-6"></i>
+        </div>
+      </div>
+      <div>
+        <h1 class="text-lg font-semibold leading-tight">NeoGen · AI</h1>
+        <p class="text-xs text-white/60 -mt-0.5">基因美学精准服务平台</p>
+      </div>
+    </div>
+
+    <nav class="hidden md:flex items-center gap-4">
+      <a class="text-sm px-3 py-2 rounded-md hover:bg-white/10 transition">产品</a>
+      <a class="text-sm px-3 py-2 rounded-md hover:bg-white/10 transition">技术</a>
+      <a class="text-sm px-3 py-2 rounded-md hover:bg-white/10 transition">合作</a>
+      <a class="text-sm px-3 py-2 rounded-md hover:bg-white/10 transition">关于我们</a>
+      <button class="ml-3 inline-flex items-center gap-2 rounded-lg px-4 py-2 bg-gradient-to-r from-[#00ffd5] to-[#ff2fa6] text-black font-medium shadow-lg">预约检测</button>
+    </nav>
+
+    <div class="md:hidden">
+      <button class="p-2 rounded-md bg-white/5">☰</button>
+    </div>
+  </header>
+
+
+  <!-- MAIN -->
+  <main class="max-w-7xl mx-auto px-6 lg:px-8">
+
+    <!-- HERO -->
+    <section class="grid grid-cols-1 lg:grid-cols-2 gap-8 items-center py-12">
+      <div class="space-y-6">
+        <h2 class="text-4xl lg:text-5xl font-extrabold leading-tight">
+          NeoGen · AI
+          <span class="block bg-clip-text text-transparent bg-gradient-to-r from-[#00ffd5] via-[#5b2fff] to-[#ff2fa6]">基因美学·精准抗衰</span>
+        </h2>
+
+        <p class="text-lg text-white/70 max-w-xl">
+          融合基因、面部表型与临床数据的多智能体协作中枢——在术前看见风险、在方案中预测效果，让每一次美的决定都有科学依据。
+        </p>
+
+        <div class="flex items-center gap-3">
+          <button class="inline-flex items-center gap-3 rounded-2xl px-5 py-3 bg-gradient-to-r from-[#00ffd5] to-[#5b2fff] text-black font-semibold shadow-xl">
+            立即上传自拍
+            <i data-lucide="zap" class="w-4 h-4"></i>
+          </button>
+
+          <button class="rounded-2xl px-5 py-3 border border-white/20 text-sm">了解技术白皮书</button>
+        </div>
+
+        <div class="mt-4 flex gap-4 items-center text-sm text-white/60">
+          <div class="flex items-center gap-2">
+            <div class="w-3 h-3 rounded-full bg-[#00ffd5] shadow-md"></div>
+            3分钟自拍初筛
+          </div>
+          <div class="flex items-center gap-2">
+            <div class="w-3 h-3 rounded-full bg-[#ff2fa6] shadow-md"></div>
+            200+基因位点风险预测
+          </div>
+          <div class="flex items-center gap-2">
+            <div class="w-3 h-3 rounded-full bg-[#5b2fff] shadow-md"></div>
+            临床验证策略闭环
+          </div>
+        </div>
       </div>
 
-      <header className="max-w-7xl mx-auto px-6 lg:px-8 py-8 flex items-center justify-between">
-        <div className="flex items-center gap-4">
-          <div className="relative w-12 h-12 flex items-center justify-center rounded-2xl bg-gradient-to-br from-[#5b2fff] to-[#00ffd5] p-1 shadow-2xl">
-            <div className="w-full h-full rounded-xl bg-clip-padding bg-[linear-gradient(135deg,rgba(255,255,255,0.06),transparent)] backdrop-blur-sm border border-white/6 flex items-center justify-center">
-              <DNA className="w-6 h-6 text-white/95" />
-            </div>
-          </div>
-          <div>
-            <h1 className="text-lg font-semibold leading-tight">NeoGen · AI</h1>
-            <p className="text-xs text-white/60 -mt-0.5">基因美学精准服务平台</p>
-          </div>
-        </div>
+      <!-- Right UI MOCKUP -->
+      <div class="relative w-full h-[420px] rounded-2xl p-6 glass-card border border-white/10 shadow-2xl">
+        <div class="absolute -inset-1 rounded-2xl opacity-40 blur-xl bg-gradient-to-br from-[#00ffd5] via-[#5b2fff] to-[#ff2fa6]"></div>
 
-        <nav className="hidden md:flex items-center gap-4">
-          <a className="text-sm px-3 py-2 rounded-md hover:bg-white/6 transition">产品</a>
-          <a className="text-sm px-3 py-2 rounded-md hover:bg-white/6 transition">技术</a>
-          <a className="text-sm px-3 py-2 rounded-md hover:bg-white/6 transition">合作</a>
-          <a className="text-sm px-3 py-2 rounded-md hover:bg-white/6 transition">关于我们</a>
-          <button className="ml-3 inline-flex items-center gap-2 rounded-lg px-4 py-2 bg-gradient-to-r from-[#00ffd5] to-[#ff2fa6] text-black font-medium shadow-lg transform hover:scale-[1.02] transition">预约检测</button>
-        </nav>
+        <div class="relative z-10 grid grid-cols-2 gap-4 h-full">
 
-        <div className="md:hidden">
-          <button className="p-2 rounded-md bg-white/4">☰</button>
-        </div>
-      </header>
+          <div class="flex flex-col gap-3">
 
-      <main className="max-w-7xl mx-auto px-6 lg:px-8">
-        {/* Hero */}
-        <section className="grid grid-cols-1 lg:grid-cols-2 gap-8 items-center py-12">
-          <div className="space-y-6">
-            <motion.h2
-              initial={{ y: 12, opacity: 0 }}
-              animate={{ y: 0, opacity: 1 }}
-              transition={{ delay: 0.1 }}
-              className="text-4xl lg:text-5xl font-extrabold tracking-tight leading-[1.02]"
-            >
-              NeoGen · AI
-              <span className="block bg-clip-text text-transparent bg-gradient-to-r from-[#00ffd5] via-[#5b2fff] to-[#ff2fa6]">基因美学·精准抗衰</span>
-            </motion.h2>
-
-            <motion.p
-              initial={{ opacity: 0 }}
-              animate={{ opacity: 1 }}
-              transition={{ delay: 0.18 }}
-              className="text-lg text-white/70 max-w-xl"
-            >
-              融合基因、面部表型与临床数据的多智能体协作中枢——在术前看见风险、在方案中预测效果，让每一次美的决定都有科学依据。
-            </motion.p>
-
-            <div className="flex items-center gap-3">
-              <motion.button
-                whileHover={{ scale: 1.03 }}
-                className="inline-flex items-center gap-3 rounded-2xl px-5 py-3 bg-[linear-gradient(90deg,#00ffd5,#5b2fff)] text-black font-semibold shadow-xl"
-              >
-                立即上传自拍
-                <Zap className="w-4 h-4" />
-              </motion.button>
-
-              <motion.button whileHover={{ scale: 1.03 }} className="rounded-2xl px-5 py-3 border border-white/8 text-sm">
-                了解技术白皮书
-              </motion.button>
-            </div>
-
-            <div className="mt-4 flex gap-4 items-center text-sm text-white/60">
-              <div className="flex items-center gap-2">
-                <div className="w-3 h-3 rounded-full bg-[#00ffd5] shadow-md" />
-                <span>3分钟自拍初筛</span>
+            <div class="flex-1 rounded-lg bg-white/5 p-4 backdrop-blur-sm border border-white/10 flex flex-col justify-between">
+              <div>
+                <h4 class="text-xs text-white/70">智能侧写</h4>
+                <p class="text-sm font-semibold">皮肤健康评分</p>
               </div>
-              <div className="flex items-center gap-2">
-                <div className="w-3 h-3 rounded-full bg-[#ff2fa6] shadow-md" />
-                <span>200+基因位点风险预测</span>
-              </div>
-              <div className="flex items-center gap-2">
-                <div className="w-3 h-3 rounded-full bg-[#5b2fff] shadow-md" />
-                <span>临床验证策略闭环</span>
-              </div>
-            </div>
-          </div>
-
-          {/* Right: glass mockup */}
-          <motion.div
-            initial={{ scale: 0.98, opacity: 0 }}
-            animate={{ scale: 1, opacity: 1 }}
-            transition={{ delay: 0.25 }}
-            className="relative w-full h-[420px] rounded-2xl p-6 glass-card border border-white/6 shadow-2xl"
-          >
-            <div className="absolute -inset-1 rounded-2xl opacity-40 blur-[18px] bg-gradient-to-br from-[#00ffd5] via-[#5b2fff] to-[#ff2fa6] mix-blend-screen" />
-            <div className="relative z-10 grid grid-cols-2 gap-4 h-full">
-              <div className="col-span-1 flex flex-col gap-3">
-                <div className="flex-1 rounded-lg bg-gradient-to-b from-white/3 to-white/2 p-4 backdrop-blur-sm border border-white/5 flex flex-col justify-between">
-                  <div>
-                    <h4 className="text-xs text-white/80">智能侧写</h4>
-                    <p className="text-sm font-semibold text-white/95">皮肤健康评分</p>
-                  </div>
-                  <div className="mt-2 flex items-end justify-between">
-                    <div>
-                      <div className="text-3xl font-bold">78</div>
-                      <div className="text-xs text-white/60 -mt-1">综合指数</div>
-                    </div>
-                    <div className="text-xs text-white/60">基因+影像</div>
-                  </div>
-                </div>
-
-                <div className="rounded-lg p-3 bg-white/3 border border-white/5 backdrop-blur-sm flex items-center gap-3">
-                  <div className="w-10 h-10 rounded-md bg-gradient-to-br from-[#5b2fff] to-[#00ffd5] flex items-center justify-center"> 
-                    <Feather className="w-4 h-4 text-black/90" />
-                  </div>
-                  <div>
-                    <div className="text-xs text-white/80">方案推荐</div>
-                    <div className="text-sm font-medium">修复 + 营养支持</div>
-                  </div>
-                </div>
-
-                <div className="rounded-lg p-3 bg-white/2 border border-white/5 backdrop-blur-sm flex items-center gap-3">
-                  <div className="w-10 h-10 rounded-md bg-gradient-to-br from-[#ff2fa6] to-[#5b2fff] flex items-center justify-center"> 
-                    <Users className="w-4 h-4 text-black/90" />
-                  </div>
-                  <div>
-                    <div className="text-xs text-white/80">临床匹配</div>
-                    <div className="text-sm font-medium">相似病例 14 条</div>
-                  </div>
-                </div>
-              </div>
-
-              <div className="col-span-1 rounded-lg overflow-hidden relative">
-                <div className="absolute inset-0 bg-gradient-to-br from-transparent via-black/10 to-black/30" />
-                <img src="/mockups/face-scan.png" alt="face-scan" className="w-full h-full object-cover rounded-lg" />
-                <div className="absolute left-3 top-3 bg-white/6 px-2 py-1 rounded-md text-xs">术前风险预判</div>
-              </div>
-            </div>
-          </motion.div>
-        </section>
-
-        {/* Features */}
-        <section className="py-10 grid grid-cols-1 md:grid-cols-3 gap-6">
-          {[
-            { title: '多模态融合', desc: '基因+影像+临床的三维决策引擎', icon: Settings },
-            { title: '可解释AI', desc: '特征可视化与决策可回溯', icon: Settings },
-            { title: '实时反馈', desc: '术后追踪与营养干预闭环', icon: Sun },
-          ].map((f, i) => (
-            <motion.div key={i} whileHover={{ y: -6 }} className="glass-card p-6 rounded-2xl border border-white/6 backdrop-blur-md">
-              <div className="flex items-center gap-4">
-                <div className="w-12 h-12 rounded-xl bg-gradient-to-br from-[#5b2fff] to-[#00ffd5] flex items-center justify-center shadow-lg">
-                  {/* icon placeholder */}
-                  <Settings className="w-6 h-6 text-black/90" />
-                </div>
+              <div class="mt-2 flex items-end justify-between">
                 <div>
-                  <h3 className="text-lg font-semibold">{f.title}</h3>
-                  <p className="text-sm text-white/70 mt-1">{f.desc}</p>
+                  <div class="text-3xl font-bold">78</div>
+                  <div class="text-xs text-white/50 -mt-1">综合指数</div>
                 </div>
-              </div>
-            </motion.div>
-          ))}
-        </section>
-
-        {/* Workflow */}
-        <section className="py-12 bg-gradient-to-b from-transparent to-white/2 rounded-xl p-6">
-          <h3 className="text-2xl font-bold mb-6">工作流</h3>
-          <div className="grid grid-cols-1 md:grid-cols-4 gap-4">
-            {[
-              { step: '拍照/样本', body: '用户上传5方位自拍或提交基因样本' },
-              { step: '智能分析', body: '多模态AI并行诊断与风险预判' },
-              { step: '方案会诊', body: '多智能体会诊生成可执行方案' },
-              { step: '术后随访', body: '闭环追踪与动态优化' },
-            ].map((s, idx) => (
-              <div key={idx} className="p-4 rounded-xl border border-white/6 backdrop-blur-sm glass-card">
-                <div className="text-sm text-white/60">步骤 {idx + 1}</div>
-                <div className="text-lg font-semibold mt-2">{s.step}</div>
-                <div className="text-sm text-white/70 mt-2">{s.body}</div>
-              </div>
-            ))}
-          </div>
-        </section>
-
-        {/* CTA strip */}
-        <section className="mt-10 rounded-2xl p-6 flex items-center justify-between bg-[linear-gradient(90deg,#0b1020,rgba(11,16,32,0.6))] border border-white/6">
-          <div>
-            <h4 className="text-lg font-bold">准备好让每一次美丽的选择都更确定了吗？</h4>
-            <p className="text-sm text-white/70">上传你的自拍或预约医院检测，开启基因驱动的抗衰计划。</p>
-          </div>
-          <div className="flex items-center gap-3">
-            <button className="px-5 py-3 rounded-lg bg-gradient-to-r from-[#00ffd5] to-[#ff2fa6] font-semibold">开始检测</button>
-            <button className="px-4 py-2 rounded-lg border border-white/8">联系我们</button>
-          </div>
-        </section>
-
-        {/* Footer */}
-        <footer className="mt-14 py-10 border-t border-white/6 text-white/60">
-          <div className="max-w-7xl mx-auto flex flex-col md:flex-row items-center justify-between gap-6">
-            <div>
-              <div className="flex items-center gap-3">
-                <div className="w-10 h-10 rounded-lg bg-gradient-to-br from-[#5b2fff] to-[#00ffd5] flex items-center justify-center"> 
-                  <DNA className="w-5 h-5" />
-                </div>
-                <div>
-                  <div className="font-semibold">NeoGen · AI</div>
-                  <div className="text-xs text-white/50">基因美学精准服务平台</div>
-                </div>
+                <div class="text-xs text-white/50">基因+影像</div>
               </div>
             </div>
-            <div className="text-sm">© {new Date().getFullYear()} NeoGen. 保留所有权利</div>
+
+            <div class="rounded-lg p-3 bg-white/5 border border-white/10 backdrop-blur-sm flex items-center gap-3">
+              <div class="w-10 h-10 rounded-md bg-gradient-to-br from-[#5b2fff] to-[#00ffd5] flex items-center justify-center"> 
+                <i data-lucide="feather" class="w-4 h-4"></i>
+              </div>
+              <div>
+                <div class="text-xs text-white/70">方案推荐</div>
+                <div class="text-sm font-medium">修复 + 营养支持</div>
+              </div>
+            </div>
+
+            <div class="rounded-lg p-3 bg-white/5 border border-white/10 backdrop-blur-sm flex items-center gap-3">
+              <div class="w-10 h-10 rounded-md bg-gradient-to-br from-[#ff2fa6] to-[#5b2fff] flex items-center justify-center"> 
+                <i data-lucide="users" class="w-4 h-4"></i>
+              </div>
+              <div>
+                <div class="text-xs text-white/70">临床匹配</div>
+                <div class="text-sm font-medium">相似病例 14 条</div>
+              </div>
+            </div>
+
           </div>
-        </footer>
-      </main>
 
-      {/* tiny styles for glass card */}
-      <style jsx>{`
-        .glass-card{
-          background: linear-gradient(180deg, rgba(255,255,255,0.02), rgba(255,255,255,0.01));
-        }
-        @media (prefers-reduced-motion: no-preference){
-          .glass-card{ transition: transform .28s cubic-bezier(.2,.9,.2,1); }
-        }
-      `}</style>
-    </div>
-  );
-}
+          <div class="rounded-lg overflow-hidden relative">
+            <div class="absolute inset-0 bg-gradient-to-br from-transparent via-black/20 to-black/40"></div>
+            <img src="/mockups/face-scan.png" class="w-full h-full object-cover" />
+            <div class="absolute left-3 top-3 bg-white/10 px-2 py-1 rounded-md text-xs">术前风险预判</div>
+          </div>
 
+        </div>
+      </div>
+    </section>
+
+
+    <!-- FEATURES -->
+    <section class="py-10 grid grid-cols-1 md:grid-cols-3 gap-6">
+      <div class="glass-card p-6 rounded-2xl border border-white/10 backdrop-blur-md">
